--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
@@ -70,6 +70,50 @@
                 </ul>
             </div>
         </div>
+        <section class="status">
+            <div class="status-icon">
+                <i class="fa fa-virus"></i>
+            </div>
+
+            <div class="info">
+                <span class="info-total">123,456,789</span>
+                <h2 class="info-label">confirmados</h2>
+            </div>
+        </section>
+        
+        <section class="status">
+            <div class="status-icon">
+                <i class="fa fa-virus"></i>
+            </div>
+
+            <div class="info">
+                <span class="info-total">123,456,789</span>
+                <h2 class="info-label">confirmados</h2>
+            </div>
+        </section>
+
+        <section class="status">
+            <div class="status-icon">
+                <i class="fa fa-virus"></i>
+            </div>
+
+            <div class="info">
+                <span class="info-total">123,456,789</span>
+                <h2 class="info-label">confirmados</h2>
+            </div>
+        </section>
+
+        <section class="status">
+            <div class="status-icon">
+                <i class="fa fa-virus"></i>
+            </div>
+
+            <div class="info">
+                <span class="info-total">123,456,789</span>
+                <h2 class="info-label">confirmados</h2>
+            </div>
+        </section>
+        
     </div>
 
 
