--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
@@ -71,46 +71,46 @@
             </div>
         </div>
         <section class="status">
-            <div class="status-icon">
+            <div class="status-icon status-icon--confirmed">
                 <i class="fa fa-virus"></i>
             </div>
 
             <div class="info">
-                <span class="info-total">123,456,789</span>
-                <h2 class="info-label">confirmados</h2>
+                <span class="info-total info-total--confirmed">123,456,789</span>
+                <h2 class="info-label">Confirmados</h2>
             </div>
         </section>
         
         <section class="status">
-            <div class="status-icon">
-                <i class="fa fa-virus"></i>
+            <div class="status-icon status-icon--deaths">
+                <i class="fa fa-frown"></i>
             </div>
 
             <div class="info">
-                <span class="info-total">123,456,789</span>
-                <h2 class="info-label">confirmados</h2>
+                <span class="info-total info-total--deaths">123,456,789</span>
+                <h2 class="info-label">Mortes</h2>
             </div>
         </section>
 
         <section class="status">
-            <div class="status-icon">
-                <i class="fa fa-virus"></i>
+            <div class="status-icon status-icon--vacinated-1">
+                <i class="fa fa-syringe"></i>
             </div>
 
             <div class="info">
-                <span class="info-total">123,456,789</span>
-                <h2 class="info-label">confirmados</h2>
+                <span class="info-total info-total--vaccinated-1">123,456,789</span>
+                <h2 class="info-label">Primeira dose</h2>
             </div>
         </section>
 
         <section class="status">
-            <div class="status-icon">
-                <i class="fa fa-virus"></i>
+            <div class="status-icon status-icon--vacinated-2">
+                <i class="fa fa-syringe"></i>
             </div>
 
             <div class="info">
-                <span class="info-total">123,456,789</span>
-                <h2 class="info-label">confirmados</h2>
+                <span class="info-total info-total--vaccinated-2">123,456,789</span>
+                <h2 class="info-label">Segunda dose + dose única </h2>
             </div>
         </section>
         
