--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
@@ -114,6 +114,56 @@
             </div>
         </section>
         
+        <section class="data-box data-box--30">
+            <h2 class="data-box--header">
+                Confirmados (últimos 30 dias)
+            </h2>
+            <div class="data-box--body"></div>
+        </section>
+
+        <section class="data-box data-box--vaccinated-1">
+            <h2 class="data-box--header">
+               Vacinados
+            </h2>
+            <div class="data-box--body"></div>
+        </section>
+
+        <section class="data-box data-box--vaccinated-2">
+            <h2 class="data-box--header">
+                Vacinados
+            </h2>
+            <div class="data-box--body"></div>
+        </section>
+
+        <section class="data-box data-box--deaths">
+            <h2 class="data-box--header">
+                Mortes por dia
+            </h2>
+            <p class="data-box--description"></p>
+            <div class="data-box--body"></div>
+        </section>
+
+        <section class="data-box data-box--confirmed">
+            <h2 class="data-box--header">
+               Confirmados por dia
+            </h2>
+            <p class="data-box--description"></p>
+            <div class="data-box--body"></div>
+        </section>
+
+        <section class="data-box data-box--abs">
+            <h2 class="data-box--header">
+                Vacinação(n)
+            </h2>
+            <div class="data-box--body"></div>
+        </section>
+
+        <section class="data-box">
+            <h2 class="data-box--header">
+                Confirmados (últimos 30 dias)
+            </h2>
+            <div class="data-box--body"></div>
+        </section>
     </div>
 
 
