--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
@@ -153,18 +153,26 @@
 
         <section class="data-box data-box--abs">
             <h2 class="data-box--header">
-                Vacinação(n)
+                Vacinação(números absolutos )
             </h2>
             <div class="data-box--body"></div>
         </section>
 
-        <section class="data-box">
+        <section class="data-box data-box--vaccinated-day">
             <h2 class="data-box--header">
-                Confirmados (últimos 30 dias)
+                Vacinados por dia
             </h2>
             <div class="data-box--body"></div>
         </section>
     </div>
+
+    <footer>
+        <div class="footer-text">
+            <p class="footer-text__source">Fonte: Consórcio de veículos de imprensa a partir de dados das secretarias estaduais de Saúde</p>
+            <p class="footer-text__copyright">Desenvolvido por Jo@o Pedro . <br> <a href="#"> Clique aqui para aprender a fazer esse projeto. </a></p>
+
+        </div>
+    </footer>
 
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.27.3/apexcharts.min.js" integrity="sha512-nKTh1Ik8Kzbrxo9A6xOBtEbzdNYcjI4Pr5XE88sNJQk87sY8mBlUfh61lYm0i710r5mGcIZ9tWSwORQbQ4plQQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
