--- a/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
+++ b/Dio.me/FullStack Developer/projeto/Dashboard covid/covid-brasil-starter-files-main/index.html
@@ -25,7 +25,7 @@
 
         <div class="switch">
             <i class="fas fa-sun"></i>
-            <span class="switch_track"></span>
+            <span class="switch__track"></span>
             <i class="fas fa-moon"></i>
         </div>
         
